--- a/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntMdiTab.razor
@@ -2,7 +2,7 @@
 @namespace Enter.Ui.Components
 <EntTab @ref="_tab"
         @attributes="@AdditionalAttributes"
-        class="@RootCss"
+        class="@ClassNames"
         ItemClass="@ItemClass"
         ResponsiveMode="@ResponsiveMode"
         Direction="@Direction"
