--- a/Source/Enter.Ui/Components/Tabs/EntTab.razor
+++ b/Source/Enter.Ui/Components/Tabs/EntTab.razor
@@ -3,7 +3,7 @@
 @inherits EntTabBase
 @namespace Enter.Ui.Components
 <CascadingValue Value="@(this)">
-    <div @attributes="@AdditionalAttributes" class="@RootCss">
+    <div @attributes="@AdditionalAttributes" class="@ClassNames">
 
         @if (ResponsiveMode && Direction == EntTabDirection.Vertical)
         {
