--- a/Source/Enter.Ui/Components/Toast/EntToast.razor
+++ b/Source/Enter.Ui/Components/Toast/EntToast.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Toast.Services
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 
 @if (ChildContent is not null)
 {
