--- a/example/Enter.Dashboard/Pages/Documents/IconPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/IconPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/documents/icons"
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Cores.Bases.EntPageBase
+@inherits Enter.Ui.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Title="Default Icons" class="mb-4">
