--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/documents/mdi-tabs"
 @using Enter.Ui.Services
-@inherits Enter.Ui.Cores.Bases.EntPageBase
+@inherits Enter.Ui.Bases.EntPageBase
 @layout DocumentLayout
 
 <EntMdiTab Tag="MdiTabPage" Responsive ItemDirection="EntTabItemDirection.Horizontal"
