--- a/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ModalPage.razor
@@ -2,7 +2,7 @@
 @using Enter.Ui.Components.Modal
 @using Enter.Ui.Core
 @using Enter.Ui.Components.Flex
-@inherits Enter.Ui.Cores.Bases.EntPageBase
+@inherits Enter.Ui.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true" Title="Modals">
