--- a/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
+++ b/Source/Enter.Ui/Components/AppBar/EntAppBar.razor
@@ -1,8 +1,8 @@
 ﻿@using Enter.Ui.Components.Button
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 @namespace Enter.Ui.Components
-<div @attributes="@AdditionalAttributes" class="@cssClass">
+<div @attributes="@AdditionalAttributes" class="@ClassNames">
     @if (ShowBack)
     {
         <EntButton @onclick="ToggleClick" Appearance="ButtonAppearance.Outline" Icon="EntIconName.ChevronRight"/>
@@ -17,9 +17,11 @@
 
 @code {
 
-    protected string cssClass => CssBuilder
-        .AddCss("ent-appbar")
-        .Build();
+    protected override void BuildClasses(ClassBuilder builder)
+    {
+        builder.AddClass("ent-appbar");
+        base.BuildClasses(builder);
+    }
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
@@ -36,8 +38,9 @@
     [Parameter]
     public string Title { get; set; }
 
-    public override void Dispose()
+    protected override void Dispose(bool disposing)
     {
+        base.Dispose(disposing);
     }
 
 }
