--- a/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
+++ b/Source/Enter.Ui/Components/Inputs/EntInputGroup.razor
@@ -2,9 +2,9 @@
 
 @typeparam TValue;
 @using System.Linq.Expressions
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 
-<div @attributes="@AdditionalAttributes" class="@RootCss" id="@Id">
+<div @attributes="@AdditionalAttributes" class="@ClassNames" id="@Id">
     @if (Label != null)
     {
         <label class="ent-input-group-label">@Label</label>
@@ -17,10 +17,12 @@
 
 @code {
 
-    private string RootCss => CssBuilder
-        .AddCss("ent-input-group")
-        .Build();
 
+    protected override void BuildClasses(ClassBuilder builder)
+    {
+        builder.AddClass("ent-input-group");
+        base.BuildClasses(builder);
+    }
 
     [Parameter]
     public Expression<Func<TValue>>? For { get; set; }
@@ -31,8 +33,9 @@
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
-    public override void Dispose()
+    protected override void Dispose(bool disposing)
     {
+        base.Dispose(disposing);
     }
 
 }
