--- a/Source/Enter.Ui/Components/Modal/EntModalProvider.razor
+++ b/Source/Enter.Ui/Components/Modal/EntModalProvider.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Services
 @using Enter.Ui.Components.Modal
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 
 <div class="ent-modal-provider ">
     <CascadingValue Value="this" IsFixed="true">
