--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
-<div @attributes="AdditionalAttributes" class="@RootCss">
+@inherits Enter.Ui.Bases.EntComponentBase
+<div @attributes="AdditionalAttributes" class="@ClassNames">
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
         @if (Icon != null)
         {
