--- a/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
+++ b/Source/Enter.Ui/Components/NavMenu/EntNavMenuTitle.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Text
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 
 <EntText Type="EntTextType.Bold" Size="EntTextSize.Subtitle">
     @Title
@@ -11,8 +11,9 @@
     [Parameter]
     public string Title { get; set; }
 
-    public override void Dispose()
+    protected override void Dispose(bool disposing)
     {
+        base.Dispose(disposing);
     }
 
 }
