--- a/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
+++ b/Source/Enter.Ui/Components/Shimmer/EntShimmer.razor
@@ -1,23 +1,28 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Shimmer
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
-<span @attributes="@AdditionalAttributes" class="@RootClass" style="@RootStyle">
+@inherits Enter.Ui.Bases.EntComponentBase
+<span @attributes="@AdditionalAttributes" class="@ClassNames" style="@StyleNames">
 </span>
 
 @code {
 
-    private string RootClass => CssBuilder
-        .AddCss("ent-shimmer")
-        .AddCss("ent-shimmer-pulse", Effect == EntShimmerEffect.Pulse)
-        .AddCss("ent-shimmer-wave", Effect == EntShimmerEffect.Wave)
-        .AddCss("ent-shimmer-rectangle", Type == EntShimmerType.Rectangle)
-        .AddCss("ent-shimmer-circular", Type == EntShimmerType.Circular)
-        .Build();
+    protected override void BuildClasses(ClassBuilder builder)
+    {
+        builder.AddClass("ent-shimmer")
+            .AddClass("ent-shimmer-pulse", Effect == EntShimmerEffect.Pulse)
+            .AddClass("ent-shimmer-wave", Effect == EntShimmerEffect.Wave)
+            .AddClass("ent-shimmer-rectangle", Type == EntShimmerType.Rectangle)
+            .AddClass("ent-shimmer-circular", Type == EntShimmerType.Circular);
+        
+        base.BuildClasses(builder);
+    }
 
-    private string RootStyle => StyleBuilder
-        .AddStyle($"width: {Width}", Width != null)
-        .AddStyle($"height: {Height}", Height != null)
-        .Build();
+    protected override void BuildStyles(StyleBuilder builder)
+    {
+        builder.AddStyle($"width: {Width}", Width != null)
+            .AddStyle($"height: {Height}", Height != null);
+        base.BuildStyles(builder);
+    }
 
     [Parameter]
     public string? Width { get; set; }
@@ -32,8 +37,6 @@
     public EntShimmerEffect Effect { get; set; } = EntShimmerEffect.Pulse;
 
 
-    public override void Dispose()
-    {
-    }
+  
 
 }
