--- a/Source/Enter.Ui/Components/Toolbar/EntToolbar.razor
+++ b/Source/Enter.Ui/Components/Toolbar/EntToolbar.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Enter.Ui.Components
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 <CascadingValue Value="@(this)">
-    <div @attributes="AdditionalAttributes" class="@RootCss">
+    <div @attributes="AdditionalAttributes" class="@ClassNames">
         @ChildContent
     </div>
 </CascadingValue>
