--- a/Source/Enter.Ui/Components/Toolbar/EntToolbarButton.razor
+++ b/Source/Enter.Ui/Components/Toolbar/EntToolbarButton.razor
@@ -1,9 +1,9 @@
 ﻿@namespace Enter.Ui.Components
 @using Enter.Ui.Components.Icon
 @using Enter.Ui.Components.Text
-@inherits Enter.Ui.Cores.Bases.EntComponentBase
+@inherits Enter.Ui.Bases.EntComponentBase
 <CascadingValue Value="@(this)">
-    <div @attributes="AdditionalAttributes" class="@RootClass">
+    <div @attributes="AdditionalAttributes" class="@ClassNames">
         @if (Icon != null && !Loading)
         {
             <EntIcon Icon="@Icon" IconSize="EntIconSize.Medium" class="ent-toolbar-button-icon" IconStyle="EntIconStyle.Light"/>
@@ -23,8 +23,8 @@
 
 @code {
 
-    private string RootClass => CssBuilder
-        .AddCss("ent-toolbar-button")
+    private string ClassNames => ClassBuilder
+        .AddClass("ent-toolbar-button")
         .Build();
 
 
@@ -38,8 +38,9 @@
     public bool Loading { get; set; }
 
 
-    public override void Dispose()
+    protected override void Dispose(bool disposing)
     {
+        base.Dispose(disposing);
     }
 
 }
