--- a/example/Enter.Dashboard/Pages/Documents/ToastPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ToastPage.razor
@@ -3,7 +3,7 @@
 @using Enter.Ui.Core
 @using Enter.Ui.Components.Flex
 @using Enter.Ui.Components.Toast.Services
-@inherits Enter.Ui.Cores.Bases.EntPageBase
+@inherits Enter.Ui.Bases.EntPageBase
 @layout DocumentLayout
 <div class="p-4">
     <EntCard Expandable="true" Title="Success">
